Got the mob directly to the item, and variant specific loot drops, also babies no longer barter